fix: flex-wrap

--- a/app.css
+++ b/app.css
@@ -161,6 +161,7 @@ color: #999;
     display: flex;
     align-items: center;
     justify-content: flex-start;
+    flex-wrap: wrap;
     margin-top: 20px;
     /* width: 54px;
     height: 54px;
